--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,13 @@
     <string name="total">Total</string>
     <string name="text_confirm">Konfirmasi!</string>
     <string name="text_confirm_payment">Konfirmasi Pembayaran</string>
+    <string name="history">Daftar Riwayat</string>
+    <string name="organizer_name">Penyelenggara</string>
+    <string name="organizer_address">Alamat Penyelenggara</string>
+    <string name="account_name">Nama</string>
+    <string name="account_email">contoh@email.com</string>
+    <string name="change_profile">Ubah Profil</string>
+    <string name="qurban_registered">Qurban Terdaftar</string>
+    <string name="iv_description_logo">Gambar Aplikasi Qurban.in</string>
+    <string name="iv_description_logout">Gambar Logout Akun</string>
 </resources>
