--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,33 @@
     <string name="total">Total</string>
     <string name="text_confirm">Konfirmasi!</string>
     <string name="text_confirm_payment">Konfirmasi Pembayaran</string>
+    <string name="illus_register">Gambar ilustrasi daftar</string>
+    <string name="accout_register">Daftar akun</string>
+    <string name="email">Email</string>
+    <string name="password">Kata Sandi</string>
+    <string name="user_name">Warga/Pekurban</string>
+    <string name="have_account">Sudah punya akun?</string>
+    <string name="login">Masuk</string>
+    <string name="search_organizer">Cari Penyelenggara</string>
+    <string name="back_to_previous_page">Kembali ke halaman sebelumnya</string>
+    <string name="app_logo">Logo aplikasi</string>
+    <string name="dummy_user_greeting">Selamat Pagi, Reihan</string>
+    <string name="dummy_user_location">Berkoh, Purwokerto Selatan, Banyumas</string>
+    <string name="province">Provinsi</string>
+    <string name="city">Kabupaten</string>
+    <string name="district">Kecamatan</string>
+    <string name="sub_district">Kelurahan/Desa</string>
+    <string name="ex_province">ex: Jawa Tengah</string>
+    <string name="ex_city">ex: Banyumas</string>
+    <string name="ex_district">ex: Purwokerto</string>
+    <string name="ex_sub_district">ex: Berkoh</string>
+    <string name="lets_search">Ayo cari!</string>
+    <string name="set_location">Atur Lokasi</string>
+    <string name="dummy_organizer_name">Qurban Masjid Al-Ikhlas</string>
+    <string name="dummy_organizer_location">Berkoh, Purwokerto Selatan</string>
+    <string name="dummy_total_goat">5/10</string>
+    <string name="dummy_total_cow">5/10</string>
+    <string name="image_organizer">Gambar penyelenggara</string>
+    <string name="enter_current_location">Masukkan Lokasi Terkini</string>
+    <string name="nearest_organizer">Penyelenggara Terdekat</string>
 </resources>
