--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Qurban.In</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="registered">Terdaftar</string>
     <string name="execution">Pelaksanaan</string>
     <string name="deliver">Pengambilan</string>
@@ -57,21 +55,11 @@
     <string name="enter_current_location">Masukkan Lokasi Terkini</string>
     <string name="nearest_organizer">Penyelenggara Terdekat</string>
     <string name="loginAccount">Masuk ke akun</string>
-    <string name="email">Email</string>
     <string name="kata_sandi">Kata Sandi</string>
     <string name="Login">Masuk</string>
     <string name="notHaveAccount">Tidak punya akun?</string>
     <string name="createAccount">Daftar</string>
-    <string name="berkah_purwokerto_selatan">Berkah, Purwokerto Selatan</string>
-    <string name="ketersediaan">Ketersediaan</string>
-    <string name="qurban">Qurban</string>
-    <string name="masjid_al_ikhlas">Masjid Al-Ikhlas</string>
-    <string name="pelaksanaan">Pelaksanaan</string>
-    <string name="_28_juni_2024">28 Juni 2024</string>
-    <string name="pengambilan">Pengambilan</string>
-    <string name="_13_00">13.00</string>
-    <string name="dummy5">5</string>
-    <string name="slash">/</string>
-    <string name="lima">5</string>
-    <string name="dummy10">10</string>
+    <string name="label_event_stock">Ketersediaan</string>
+    <string name="label_event_date">Pelaksanaan</string>
+    <string name="label_event_time_take">Pengambilan</string>
 </resources>
