SearchFragment - Logic, Display Data, Search, and navigate to DetailFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="back_to_previous_page">Kembali ke halaman sebelumnya</string>
     <string name="app_logo">Logo aplikasi</string>
     <string name="dummy_user_greeting">Selamat Pagi, Reihan</string>
-    <string name="dummy_user_location">Berkoh, Purwokerto Selatan, Banyumas</string>
+    <string name="dummy_user_location">Berkoh, Purwokerto Selatan, Banyumas, Jawa Tengah</string>
     <string name="province">Provinsi</string>
     <string name="city">Kabupaten</string>
     <string name="district">Kecamatan</string>
