--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="back_to_previous_page">Kembali ke halaman sebelumnya</string>
     <string name="app_logo">Logo aplikasi</string>
     <string name="dummy_user_greeting">Selamat Pagi, Reihan</string>
-    <string name="dummy_user_location">Berkoh, Purwokerto Selatan, Banyumas, Jawa Tengah</string>
+    <string name="dummy_user_location">Lokasi Belum Diatur</string>
     <string name="province">Provinsi</string>
     <string name="regency">Kabupaten</string>
     <string name="district">Kecamatan</string>
@@ -78,6 +78,15 @@
     <string name="register_qurban">Daftar Qurban</string>
     <string name="cd_icon_goat">icon_goat</string>
     <string name="cd_icon_cow">cd icon cow</string>
+    <string name="text_not_nearest_event">Tidak Ada Event Terdekat</string>
+    <string name="unpaid">Belum Lunas</string>
+    <string name="sold">Lunas</string>
+    <string name="cancel">Batal</string>
+    <string name="execute">Terpotong</string>
+    <string name="ongoing">Sedang Berlangsung</string>
+    <string name="available">Tersedia</string>
+    <string name="cardNumber">Rekening %s</string>
+    <string name="havent_number_card">Tidak ada nomor rekening</string>
     <string-array name="user_type">
         <item>Warga</item>
         <item>Penyelenggara</item>
